these error messages weren't there before

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </p>
         </div>
       </header>
-      <main class="main_content">
+      <main class="main-content">
         <section class="menu">
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
@@ -148,7 +148,7 @@
                 src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
                 style="border: none"
               ></video>
-              <div class="recipes__video-caption_section">
+              <div class="recipes__video-captions">
                 <p class="recipes__video-caption">Aeropress Technique</p>
                 <p class="recipes__video-caption">~5 min</p>
               </div>
@@ -160,7 +160,7 @@
                 src="https://www.youtube.com/watch?v=st571DYYTR8"
                 style="border: none"
               ></video>
-              <div class="recipes__video-caption_section">
+              <div class="recipes__video-captions">
                 <p class="recipes__video-caption">French Press Technique</p>
                 <p class="recipes__video-caption">~3 min</p>
               </div>
@@ -243,7 +243,7 @@
               alt="Practicum Logo"
             />
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column-socials">
             <h4 class="footer__social-heading">Social Media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
