--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             alt="Coffee Shop Logo"
             class="header__logo"
           />
-          <ul class="header__nav_links">
+          <ul class="header__nav-links">
             <li>
-              <a class="header__nav_link" href="#menu">Menu</a>
+              <a class="header__nav-link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="header__nav_link" href="#recipes">Recipes</a>
+              <a class="header__nav-link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="header__nav_link" href="#reservation">Book a table</a>
+              <a class="header__nav-link" href="#reservation">Book a table</a>
             </li>
             <li>
-              <a class="header__nav_link" href="#footer">Contacts</a>
+              <a class="header__nav-link" href="#footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -74,66 +74,66 @@
           </p>
           <div class="menu__cards">
             <ul class="menu__card">
-              <li><h3 class="menu__card_title">Filter</h3></li>
-              <li class="menu__card_list-item">
-                Regular (12 oz)<span class="menu__card_list-divider"></span>$1
+              <li><h3 class="menu__card-title">Filter</h3></li>
+              <li class="menu__card_type_item">
+                Regular (12 oz)<span class="menu__card_type_divider"></span>$1
               </li>
 
-              <li class="menu__card_list-item">
-                Large (16 oz)<span class="menu__card_list-divider"></span>$1.25
+              <li class="menu__card_type_item">
+                Large (16 oz)<span class="menu__card_type_divider"></span>$1.25
               </li>
-              <li class="menu__card_list-item">
-                XL (20 oz)<span class="menu__card_list-divider"></span>$1.5
+              <li class="menu__card_type_item">
+                XL (20 oz)<span class="menu__card_type_divider"></span>$1.5
               </li>
-              <li class="menu__card_list-item">
+              <li class="menu__card_type_item">
                 Party-size (24 oz, decaf)<span
-                  class="menu__card_list-divider"
+                  class="menu__card_type_divider"
                 ></span
                 >$1.75
               </li>
-              <li class="menu__card_list-item">
-                Iced Coffee (16 oz)<span class="menu__card_list-divider"></span
+              <li class="menu__card_type_item">
+                Iced Coffee (16 oz)<span class="menu__card_type_divider"></span
                 >$1.25
               </li>
             </ul>
             <ul class="menu__card">
-              <li><h3 class="menu__card_title">Espresso</h3></li>
-              <li class="menu__card_list-item">
-                Macchiato<span class="menu__card_list-divider"></span>$2.25
+              <li><h3 class="menu__card-title">Espresso</h3></li>
+              <li class="menu__card_type_item">
+                Macchiato<span class="menu__card_type_divider"></span>$2.25
               </li>
-              <li class="menu__card_list-item">
-                Cortado<span class="menu__card_list-divider"></span>$2.5
+              <li class="menu__card_type_item">
+                Cortado<span class="menu__card_type_divider"></span>$2.5
               </li>
-              <li class="menu__card_list-item">
-                Mocha<span class="menu__card_list-divider"></span>$3
+              <li class="menu__card_type_item">
+                Mocha<span class="menu__card_type_divider"></span>$3
               </li>
-              <li class="menu__card_list-item">
+              <li class="menu__card_type_item">
                 Sunrise in the Bay Area (decaf)<span
-                  class="menu__card_list-divider"
+                  class="menu__card_type_divider"
                 ></span
                 >$10
               </li>
             </ul>
             <ul class="menu__card">
-              <li><h3 class="menu__card_title">Baked Goods</h3></li>
-              <li class="menu__card_list-item">
-                Almond Croissant<span class="menu__card_list-divider"></span>$2
+              <li><h3 class="menu__card-title">Baked Goods</h3></li>
+              <li class="menu__card_type_item">
+                Almond Croissant<span class="menu__card_type_divider"></span>$2
               </li>
-              <li class="menu__card_list-item">
-                Banana Bread<span class="menu__card_list-divider"></span>$1.75
+              <li class="menu__card_type_item">
+                Banana Bread<span class="menu__card_type_divider"></span>$1.75
               </li>
-              <li class="menu__card_list-item">
-                Key Lime Pie<span class="menu__card_list-divider"></span>$3
+              <li class="menu__card_type_item">
+                Key Lime Pie<span class="menu__card_type_divider"></span>$3
               </li>
-              <li class="menu__card_list-item">
-                Blue Velvet Cake<span class="menu__card_list-divider"></span
+              <li class="menu__card_type_item">
+                Blue Velvet Cake<span class="menu__card_type_divider"></span
                 >$3.75
               </li>
-              <li class="menu__card_list-item">
-                Web Cookie<span class="menu__card_list-divider"></span>$2
+              <li class="menu__card_type_item">
+                Web Cookie<span class="menu__card_type_divider"></span>$2
               </li>
-              <li class="menu__card_list-item">
-                Fresh Bug’uette<span class="menu__card_list-divider"></span
+              <li class="menu__card_type_item">
+                Fresh Bug’uette<span class="menu__card_type_divider"></span
                 >$0.25
               </li>
             </ul>
