--- a/index.html
+++ b/index.html
@@ -75,66 +75,61 @@
           <div class="menu__cards">
             <ul class="menu__card">
               <li><h3 class="menu__card-title">Filter</h3></li>
-              <li class="menu__card_type_item">
-                Regular (12 oz)<span class="menu__card_type_divider"></span>$1
+              <li class="menu__card-item">
+                Regular (12 oz)<span class="menu__card-divider"></span>$1
               </li>
 
-              <li class="menu__card_type_item">
-                Large (16 oz)<span class="menu__card_type_divider"></span>$1.25
+              <li class="menu__card-item">
+                Large (16 oz)<span class="menu__card-divider"></span>$1.25
               </li>
-              <li class="menu__card_type_item">
-                XL (20 oz)<span class="menu__card_type_divider"></span>$1.5
+              <li class="menu__card-item">
+                XL (20 oz)<span class="menu__card-divider"></span>$1.5
               </li>
-              <li class="menu__card_type_item">
-                Party-size (24 oz, decaf)<span
-                  class="menu__card_type_divider"
-                ></span
+              <li class="menu__card-item">
+                Party-size (24 oz, decaf)<span class="menu__card-divider"></span
                 >$1.75
               </li>
-              <li class="menu__card_type_item">
-                Iced Coffee (16 oz)<span class="menu__card_type_divider"></span
-                >$1.25
+              <li class="menu__card-item">
+                Iced Coffee (16 oz)<span class="menu__card-divider"></span>$1.25
               </li>
             </ul>
             <ul class="menu__card">
               <li><h3 class="menu__card-title">Espresso</h3></li>
-              <li class="menu__card_type_item">
-                Macchiato<span class="menu__card_type_divider"></span>$2.25
+              <li class="menu__card-item">
+                Macchiato<span class="menu__card-divider"></span>$2.25
               </li>
-              <li class="menu__card_type_item">
-                Cortado<span class="menu__card_type_divider"></span>$2.5
+              <li class="menu__card-item">
+                Cortado<span class="menu__card-divider"></span>$2.5
               </li>
-              <li class="menu__card_type_item">
-                Mocha<span class="menu__card_type_divider"></span>$3
+              <li class="menu__card-item">
+                Mocha<span class="menu__card-divider"></span>$3
               </li>
-              <li class="menu__card_type_item">
+              <li class="menu__card-item">
                 Sunrise in the Bay Area (decaf)<span
-                  class="menu__card_type_divider"
+                  class="menu__card-divider"
                 ></span
                 >$10
               </li>
             </ul>
             <ul class="menu__card">
               <li><h3 class="menu__card-title">Baked Goods</h3></li>
-              <li class="menu__card_type_item">
-                Almond Croissant<span class="menu__card_type_divider"></span>$2
+              <li class="menu__card-item">
+                Almond Croissant<span class="menu__card-divider"></span>$2
               </li>
-              <li class="menu__card_type_item">
-                Banana Bread<span class="menu__card_type_divider"></span>$1.75
+              <li class="menu__card-item">
+                Banana Bread<span class="menu__card-divider"></span>$1.75
               </li>
-              <li class="menu__card_type_item">
-                Key Lime Pie<span class="menu__card_type_divider"></span>$3
+              <li class="menu__card-item">
+                Key Lime Pie<span class="menu__card-divider"></span>$3
               </li>
-              <li class="menu__card_type_item">
-                Blue Velvet Cake<span class="menu__card_type_divider"></span
-                >$3.75
+              <li class="menu__card-item">
+                Blue Velvet Cake<span class="menu__card-divider"></span>$3.75
               </li>
-              <li class="menu__card_type_item">
-                Web Cookie<span class="menu__card_type_divider"></span>$2
+              <li class="menu__card-item">
+                Web Cookie<span class="menu__card-divider"></span>$2
               </li>
-              <li class="menu__card_type_item">
-                Fresh Bug’uette<span class="menu__card_type_divider"></span
-                >$0.25
+              <li class="menu__card-item">
+                Fresh Bug’uette<span class="menu__card-divider"></span>$0.25
               </li>
             </ul>
           </div>
