--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
-            <fieldset class="reservation__form_fieldset">
-              <label class="reservation__form_label"
+            <fieldset class="reservation__form-fieldset">
+              <label class="reservation__form-label"
                 >Name*
                 <input
-                  class="reservation__form_input"
+                  class="reservation__form-input"
                   type="text"
                   required
                   placeholder="Name surname"
                 />
               </label>
-              <label class="reservation__form_label"
+              <label class="reservation__form-label"
                 >Number of guests*
                 <input
-                  class="reservation__form_input"
+                  class="reservation__form-input"
                   type="number"
                   min="1"
                   max="8"
@@ -197,29 +197,29 @@
                   placeholder="1-8"
                 />
               </label>
-              <label class="reservation__form_label"
+              <label class="reservation__form-label"
                 >Date and time*
                 <input
-                  class="reservation__form_input"
+                  class="reservation__form-input"
                   type="datetime-local"
                   required
                 />
               </label>
-              <label class="reservation__form_label"
+              <label class="reservation__form-label"
                 >Your email*
                 <input
-                  class="reservation__form_input"
+                  class="reservation__form-input"
                   type="email"
                   required
                   placeholder="email@email.com"
                 />
               </label>
-              <button class="reservation__form_button" type="submit">
+              <button class="reservation__form-button" type="submit">
                 Book a table
               </button>
-              <label class="reservation__form_label">
+              <label class="reservation__form-label">
                 <input
-                  class="reservation__form_checkbox"
+                  class="reservation__form-checkbox"
                   type="checkbox"
                   required
                 />
@@ -245,7 +245,7 @@
             </p>
           </div>
           <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation_blurred"></div>
+          <div class="about__circle about__circle_animation-blurred"></div>
         </section>
       </main>
       <footer class="footer">
