--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
   <body>
     <div class="page">
       <header class="header">
-        <nav class="header__nav">
+        <nav class="nav">
           <img
             src="./images/logo_coffee_shop.svg"
             alt="Coffee Shop Logo"
-            class="header__logo"
+            class="nav__logo"
           />
-          <ul class="header__nav-links">
+          <ul class="nav__links">
             <li>
-              <a class="header__nav-link" href="#menu">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="header__nav-link" href="#recipes">Recipes</a>
+              <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="header__nav-link" href="#reservation">Book a table</a>
+              <a class="nav__link" href="#reservation">Book a table</a>
             </li>
             <li>
-              <a class="header__nav-link" href="#footer">Contacts</a>
+              <a class="nav__link" href="#footer">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -73,63 +73,63 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-            <ul class="menu__card">
-              <li><h3 class="menu__card-title">Filter</h3></li>
-              <li class="menu__card-item">
-                Regular (12 oz)<span class="menu__card-divider"></span>$1
+            <ul class="card">
+              <li><h3 class="card__title">Filter</h3></li>
+              <li class="card__item">
+                Regular (12 oz)<span class="card__divider"></span>$1
               </li>
 
-              <li class="menu__card-item">
-                Large (16 oz)<span class="menu__card-divider"></span>$1.25
+              <li class="card__item">
+                Large (16 oz)<span class="card__divider"></span>$1.25
               </li>
-              <li class="menu__card-item">
-                XL (20 oz)<span class="menu__card-divider"></span>$1.5
+              <li class="card__item">
+                XL (20 oz)<span class="card__divider"></span>$1.5
               </li>
-              <li class="menu__card-item">
-                Party-size (24 oz, decaf)<span class="menu__card-divider"></span
+              <li class="card__item">
+                Party-size (24 oz, decaf)<span class="card__divider"></span
                 >$1.75
               </li>
-              <li class="menu__card-item">
-                Iced Coffee (16 oz)<span class="menu__card-divider"></span>$1.25
+              <li class="card__item">
+                Iced Coffee (16 oz)<span class="card__divider"></span>$1.25
               </li>
             </ul>
-            <ul class="menu__card">
-              <li><h3 class="menu__card-title">Espresso</h3></li>
-              <li class="menu__card-item">
-                Macchiato<span class="menu__card-divider"></span>$2.25
+            <ul class="card">
+              <li><h3 class="card__title">Espresso</h3></li>
+              <li class="card__item">
+                Macchiato<span class="card__divider"></span>$2.25
               </li>
-              <li class="menu__card-item">
-                Cortado<span class="menu__card-divider"></span>$2.5
+              <li class="card__item">
+                Cortado<span class="card__divider"></span>$2.5
               </li>
-              <li class="menu__card-item">
-                Mocha<span class="menu__card-divider"></span>$3
+              <li class="card__item">
+                Mocha<span class="card__divider"></span>$3
               </li>
-              <li class="menu__card-item">
+              <li class="card__item">
                 Sunrise in the Bay Area (decaf)<span
-                  class="menu__card-divider"
+                  class="card__divider"
                 ></span
                 >$10
               </li>
             </ul>
-            <ul class="menu__card">
-              <li><h3 class="menu__card-title">Baked Goods</h3></li>
-              <li class="menu__card-item">
-                Almond Croissant<span class="menu__card-divider"></span>$2
+            <ul class="card">
+              <li><h3 class="card__title">Baked Goods</h3></li>
+              <li class="card__item">
+                Almond Croissant<span class="card__divider"></span>$2
               </li>
-              <li class="menu__card-item">
-                Banana Bread<span class="menu__card-divider"></span>$1.75
+              <li class="card__item">
+                Banana Bread<span class="card__divider"></span>$1.75
               </li>
-              <li class="menu__card-item">
-                Key Lime Pie<span class="menu__card-divider"></span>$3
+              <li class="card__item">
+                Key Lime Pie<span class="card__divider"></span>$3
               </li>
-              <li class="menu__card-item">
-                Blue Velvet Cake<span class="menu__card-divider"></span>$3.75
+              <li class="card__item">
+                Blue Velvet Cake<span class="card__divider"></span>$3.75
               </li>
-              <li class="menu__card-item">
-                Web Cookie<span class="menu__card-divider"></span>$2
+              <li class="card__item">
+                Web Cookie<span class="card__divider"></span>$2
               </li>
-              <li class="menu__card-item">
-                Fresh Bug’uette<span class="menu__card-divider"></span>$0.25
+              <li class="card__item">
+                Fresh Bug’uette<span class="card__divider"></span>$0.25
               </li>
             </ul>
           </div>
@@ -144,8 +144,6 @@
             <div>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -159,8 +157,6 @@
             <div>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -176,20 +172,20 @@
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
-            <fieldset class="reservation__form-fieldset">
-              <label class="reservation__form-label"
+            <fieldset class="form__fieldset">
+              <label class="form__label"
                 >Name*
                 <input
-                  class="reservation__form-input"
+                  class="form__input"
                   type="text"
                   required
                   placeholder="Name surname"
                 />
               </label>
-              <label class="reservation__form-label"
+              <label class="form__label"
                 >Number of guests*
                 <input
-                  class="reservation__form-input"
+                  class="form__input"
                   type="number"
                   min="1"
                   max="8"
@@ -197,32 +193,22 @@
                   placeholder="1-8"
                 />
               </label>
-              <label class="reservation__form-label"
+              <label class="form__label"
                 >Date and time*
-                <input
-                  class="reservation__form-input"
-                  type="datetime-local"
-                  required
-                />
+                <input class="form__input" type="datetime-local" required />
               </label>
-              <label class="reservation__form-label"
+              <label class="form__label"
                 >Your email*
                 <input
-                  class="reservation__form-input"
+                  class="form__input"
                   type="email"
                   required
                   placeholder="email@email.com"
                 />
               </label>
-              <button class="reservation__form-button" type="submit">
-                Book a table
-              </button>
-              <label class="reservation__form-label">
-                <input
-                  class="reservation__form-checkbox"
-                  type="checkbox"
-                  required
-                />
+              <button class="form__button" type="submit">Book a table</button>
+              <label class="form__label">
+                <input class="form__checkbox" type="checkbox" required />
                 I agree with the terms of use
               </label>
             </fieldset>
@@ -245,7 +231,7 @@
             </p>
           </div>
           <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation-blurred"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
       <footer class="footer">
